--- a/src/stylesheets/base/_base.scss
+++ b/src/stylesheets/base/_base.scss
@@ -33,3 +33,11 @@ a {
     text-decoration: underline;
   }
 }
+
+h1,h2,h3,h4,h5,h6,p,ul,li{
+  margin: 0;
+  padding: 0;
+}
+li{
+  list-style: none;
+}
