--- a/src/stylesheets/layout/_header.scss
+++ b/src/stylesheets/layout/_header.scss
@@ -1,3 +1,34 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the header of the site/application.
 // -----------------------------------------------------------------------------
+.header{
+    position: absolute;
+    right: 10rem;
+    top:20%;
+    background-color: $color-background-header;
+    height: 40vh;
+    width: 30vw;
+    color: $color-main;
+    text-align: center;
+    border-radius: $border-radius-main;
+    
+    &__title{
+        font-size: 6rem;
+        border-bottom: .6rem $color-accent-header solid;
+        line-height: 1;
+        width: min-content;
+        margin: auto;
+        margin-top: 2rem;
+        font-family: $font-header-title;
+        font-weight: $font-weight-header-title;
+    }
+
+    &__subtitle{
+        text-align: right;
+        width:22vw;
+        margin: auto;
+        margin-top: .5rem;
+        font-family: $font-header-subtitle;
+        font-weight: $font-weight-header-title;
+    }
+}
