--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -20,6 +20,8 @@
 // 4. Layout-related sections
 @import
   'layout/header',
+  'layout/navigation',
+  'layout/background',
   'layout/footer';
 
 // 5. Components
