--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -1,3 +1,17 @@
 // -----------------------------------------------------------------------------
 // This file contains styles that are specific to the home page.
 // -----------------------------------------------------------------------------
+html {
+  width: 100%;
+  height: 100%;
+  background: rgb(0, 0, 0);
+  background: $gradient-background;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.home-img{
+    height:100%;
+    width:100%;
+    background-image: url("../pages/home/assets/img_back_home_placeholder2.jpg");
+    border-radius: $border-radius-main;
+}
