navigation-basic-style

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -6,8 +6,9 @@
 /// Main
 /// @type Color
 $color-main: #CFC9C9!default;
-$color-background-header: #303030;
-$color-accent-header: #888888;
+$color-background-dark: #303030;
+$color-background-overlay: #30303071;
+$color-accent: #888888;
 
 /// Background
 /// @type Gradient
