--- a/src/stylesheets/layout/_navigation.scss
+++ b/src/stylesheets/layout/_navigation.scss
@@ -1,3 +1,103 @@
-.navigation{
+.navigation {
+  position: absolute;
+  height: 100%;
+  width: 0%;
+  top: 0;
+  background-color: $color-background-overlay;
+  z-index: 15;
+
+  &__hr {
+    width: 40%;
+    height: 0.4rem;
+    background-color: $color-main;
+    margin: 0;
+     margin-left: 25%;
+     margin-top: -0.2rem;
+     border-radius: $border-radius-main;
+  }
+
+  &__nav {
+    width: 0;
+    height: 100%;
+    background-color: $color-background-dark;
+    visibility: hidden;
+    opacity: 0;
+    z-index: 18;
+
+    &--open {
+      width: 25%;
+      visibility: visible;
+      opacity: 1;
+    }
+  }
+
+  &--open {
+    height: 100%;
+    width: 100%;
+  }
+
+  &__btn-open {
     position: absolute;
+    height: 4rem;
+    width: 4rem;
+    z-index: 13;
+    margin-left: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background-image: url('../assets/icons/menu-24px.svg');
+    background-size: cover;
+    cursor: pointer;
+  }
+}
+
+.navlinks-main {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 25%;
+  padding-top: 20%;
+      padding-bottom: 20%;
+
+  &__nav-li {
+    font-family: $font-header-title;
+    font-weight: $font-weight-header-title;
+    font-size: 2rem;
+  }
+
+  &__nav-a {
+    color: $color-main;
+    text-decoration: none;
+    cursor: pointer;
+
+    &:hover {
+      color: $color-main;
+      text-decoration: none;
+    }
+  }
+}
+.navlinks-sub {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  padding-left: 25%;
+  padding-top: 20%;
+      padding-bottom: 20%;
+
+  &__nav-li {
+    font-family: $font-header-title;
+    font-weight: $font-weight-header-title;
+    font-size: 1.5rem;
+  }
+
+  &__nav-a {
+    color: $color-main;
+    text-decoration: none;
+
+    &:hover {
+      color: $color-main;
+      text-decoration: none;
+    }
+  }
 }
