--- a/src/stylesheets/base/_fonts.scss
+++ b/src/stylesheets/base/_fonts.scss
@@ -79,7 +79,7 @@
   font-style: normal;
   font-weight: 400;
   src: local('Lato Regular'), local('Lato-Regular'),
-       url('/assets/fonts/Lato/Lato-Regular.ttf') format('truetype');
+       url('../assets/fonts/Lato/Lato-Regular.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Lato';
@@ -100,7 +100,7 @@
   font-style: normal;
   font-weight: 600;
   src: local('Lato Bold'), local('Lato-Bold'),
-       url('/assets/fonts/Lato/Lato-Bold.ttf') format('truetype');
+       url('../assets/fonts/Lato/Lato-Bold.ttf') format('truetype');
 }
 @font-face {
   font-family: 'Lato';
