--- a/src/stylesheets/layout/_navigation.scss
+++ b/src/stylesheets/layout/_navigation.scss
@@ -9,11 +9,11 @@
   &__hr {
     width: 40%;
     height: 0.4rem;
-    background-color: $color-main;
+    background-color: $color-accent;
     margin: 0;
-     margin-left: 25%;
-     margin-top: -0.2rem;
-     border-radius: $border-radius-main;
+    margin-left: 25%;
+    margin-top: -0.2rem;
+    border-radius: $border-radius-main;
   }
 
   &__nav {
@@ -56,8 +56,8 @@
     width: 4rem;
     z-index: 20;
     margin-left: 0.5rem;
-    top:.5rem;
-    right: .5rem;
+    top: 50%;
+    transform: translateY(-50%);
     background-image: url('../assets/icons/close-24px.svg');
     background-size: cover;
     cursor: pointer;
@@ -71,7 +71,7 @@
   justify-content: space-around;
   padding-left: 25%;
   padding-top: 20%;
-      padding-bottom: 20%;
+  padding-bottom: 20%;
 
   &__nav-li {
     font-family: $font-header-title;
@@ -109,7 +109,7 @@
   justify-content: space-around;
   padding-left: 25%;
   padding-top: 20%;
-      padding-bottom: 20%;
+  padding-bottom: 20%;
 
   &__nav-li {
     font-family: $font-header-title;
