--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -6,6 +6,7 @@
 // 2. Vendors
 @import 'vendors/normalize';
 
+@import '~simplebar/dist/simplebar.css';
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
 
@@ -16,7 +17,7 @@
 @import 'components/button', 'components/card';
 
 // 6. Page-specific styles
-@import 'pages/home', 'pages/products';
+@import 'pages/home', 'pages/products',  'pages/about';
 
 // 7. Themes
 @import 'themes/default';
