--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -7,6 +7,9 @@
 @import 'vendors/normalize';
 
 @import '~simplebar/dist/simplebar.css';
+@import '~@material/textfield/mdc-text-field';
+@import '~@material/floating-label/mdc-floating-label';
+@import '~@material/button/mdc-button';
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
 
@@ -17,7 +20,7 @@
 @import 'components/button', 'components/card';
 
 // 6. Page-specific styles
-@import 'pages/home', 'pages/products',  'pages/about';
+@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact';
 
 // 7. Themes
 @import 'themes/default';
