--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -20,7 +20,7 @@
 @import 'components/button', 'components/card';
 
 // 6. Page-specific styles
-@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact', 'pages/impressum', 'pages/datenschutz';
+@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact', 'pages/impressum', 'pages/datenschutz','pages/anfahrt';
 
 // 7. Themes
 @import 'themes/default';
