--- a/src/stylesheets/pages/_home.scss
+++ b/src/stylesheets/pages/_home.scss
@@ -9,9 +9,9 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-.home-img{
-    height:100%;
-    width:100%;
-    background-image: url("../pages/home/assets/img_back_home_placeholder2.jpg");
-    border-radius: $border-radius-main;
+.home-img {
+  height: 100%;
+  width: 100%;
+  background-image: url('../assets/images/img_back_home_placeholder2.jpg');
+  border-radius: $border-radius-main;
 }
