--- a/src/stylesheets/components/_button.scss
+++ b/src/stylesheets/components/_button.scss
@@ -9,4 +9,8 @@
     font-family: $font-header-subtitle;
     @include mdc-states-base-color($color-background-bright);
     @include mdc-states-hover-opacity(.5);
+    display: inline-block;
+    width: fit-content;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
 }
