--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -11,6 +11,8 @@ $color-background-overlay: #30303071;
 $color-text-dark: #444343;
 $color-text-medium: #696969;
 $color-accent: #888888;
+$color-signal-red: red;
+$color-signal-green: red;
 
 /// Background
 /// @type Gradient
