--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -10,6 +10,7 @@
 @import '~@material/textfield/mdc-text-field';
 @import '~@material/floating-label/mdc-floating-label';
 @import '~@material/button/mdc-button';
+@import '~@material/textfield/helper-text/mdc-text-field-helper-text';
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
 
@@ -20,7 +21,8 @@
 @import 'components/button', 'components/card';
 
 // 6. Page-specific styles
-@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact', 'pages/impressum', 'pages/datenschutz','pages/anfahrt';
+@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact', 'pages/impressum', 'pages/datenschutz',
+  'pages/anfahrt';
 
 // 7. Themes
 @import 'themes/default';
