--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -22,7 +22,7 @@
 
 // 6. Page-specific styles
 @import 'pages/home', 'pages/products', 'pages/about', 'pages/contact', 'pages/impressum', 'pages/datenschutz',
-  'pages/anfahrt';
+  'pages/anfahrt', 'pages/login';
 
 // 7. Themes
 @import 'themes/default';
