--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -12,7 +12,7 @@ $color-text-dark: #444343;
 $color-text-medium: #696969;
 $color-accent: #888888;
 $color-signal-red: red;
-$color-signal-green: red;
+$color-signal-green: green;
 
 /// Background
 /// @type Gradient
