--- a/src/stylesheets/components/_super-user.scss
+++ b/src/stylesheets/components/_super-user.scss
@@ -2,9 +2,19 @@
     width: 100%;
     height: 5rem;
     background-color: antiquewhite;
-    position: absolute;
     z-index: 800;
     display: flex;
     justify-content: space-around;
+    position: fixed;
     top: 0;
+
+    &__btn{
+        &--show{
+            display: block;
+        }
+
+        &--hide{
+            display: none;
+        }
+    }
 }
