--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -15,14 +15,16 @@
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
 
 // 4. Layout-related sections
-@import 'layout/header', 'layout/navigation', 'layout/background', 'layout/footer';
+@import 'layout/header', 'layout/navigation', 'layout/background',
+  'layout/footer';
 
 // 5. Components
-@import 'components/button', 'components/card', 'components/super-user';
+@import 'components/button', 'components/card', 'components/super-user',
+  'components/edit-form';
 
 // 6. Page-specific styles
-@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact', 'pages/impressum', 'pages/datenschutz',
-  'pages/anfahrt', 'pages/login';
+@import 'pages/home', 'pages/products', 'pages/about', 'pages/contact',
+  'pages/impressum', 'pages/datenschutz', 'pages/anfahrt', 'pages/login';
 
 // 7. Themes
 @import 'themes/default';
