--- a/src/stylesheets/components/_super-user.scss
+++ b/src/stylesheets/components/_super-user.scss
@@ -1,20 +1,42 @@
-.super-user{
-    width: 100%;
-    height: 5rem;
-    background-color: antiquewhite;
-    z-index: 800;
+.super-user {
+  width: 100%;
+  height: 5rem;
+  background-color: $color-main;
+  z-index: 800;
+  display: flex;
+  position: fixed;
+  top: 0;
+  box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
+
+  &__info {
     display: flex;
-    justify-content: space-around;
-    position: fixed;
-    top: 0;
+    align-items: center;
+    font-family: $font-header-subtitle;
+    color: $color-text-dark;
+    margin-left: 5rem;
+  }
 
-    &__btn{
-        &--show{
-            display: block;
-        }
+  &__name-span {
+    font-family: $font-header-subtitle;
+    color: $color-text-medium;
+    margin-left: .5rem;
+  }
 
-        &--hide{
-            display: none;
-        }
+  &__btn-box {
+    position: absolute;
+    right: 4rem;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  &__btn {
+    &--show {
+      display: block;
     }
+
+    &--hide {
+      display: none;
+    }
+  }
 }
