store on all pages

--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -7,6 +7,7 @@
 $color-main: #cfc9c9 !default;
 $color-background-dark: #303030;
 $color-background-bright: #fcfcfc;
+$color-background-semi-transparent:  rgba(245, 245, 245, 0.835);
 $color-background-overlay: #30303071;
 $color-text-dark: #444343;
 $color-text-medium: #696969;
