--- a/src/stylesheets/components/_add-form.scss
+++ b/src/stylesheets/components/_add-form.scss
@@ -1,10 +1,9 @@
-.edit-form {
+.add-form {
   height: 100%;
   width: 100%;
   background: $color-background-semi-transparent;
-  z-index: 500; 
+  z-index: 500;
   position: absolute;
-  overflow-y: scroll;
   top: 0;
   left: 0;
   right: 0;
@@ -38,11 +37,11 @@
   }
 
   &--open {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  
+
   &--closed {
     display: none;
   }
