--- a/src/stylesheets/pages/_anfahrt.scss
+++ b/src/stylesheets/pages/_anfahrt.scss
@@ -12,15 +12,18 @@
   @include mdc-notched-outline-color($color-background-dark);
 
   &__map {
+    width: 100%;
+    height: 100%;
+    border: none;
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     -o-filter: grayscale(100%);
     filter: grayscale(100%);
     filter: gray;
-    width: 100%;
-    height: 100%;
-    border: none;
-    background-image: url('../assets/images/anfahrt_placeholder.png'); 
+  }
+
+  &__placeholder {
+    position: absolute;
   }
 }
