--- a/src/stylesheets/abstracts/_variables.scss
+++ b/src/stylesheets/abstracts/_variables.scss
@@ -18,6 +18,8 @@ $color-signal-green: green;
 /// Background
 /// @type Gradient
 $gradient-background: radial-gradient(circle, rgba(0, 0, 0, 0.8799894957983193) 0%, #808080 86%);
+$transition-standard: all .2s linear;
+
 
 $border-radius-main: 2px;
 $box-shadow-main: 15px 15px 15px 0px rgba(0, 0, 0, 0.75);
