--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -12,6 +12,7 @@
 @import '~@material/button/mdc-button';
 @import '~@material/textfield/helper-text/mdc-text-field-helper-text';
 @import '~@material/fab/mdc-fab';
+@import '~@material/icon-button/mdc-icon-button';
 // 3. Base stuff
 @import 'base/base', 'base/fonts', 'base/typography', 'base/helpers';
 
